# Projects_in_C

./: CMakeLists.txt
EasyInformacniSystem/: main.c
Kalkulačka/: main.c
Sortingalgorithms/: main.c
UsersWithGender/: main.c
bogoSort/: main.c  sorting.c  sorting.h
enum/: main.c
headerFiles/: calculator.c  calculator.h  main.c
house/: main.c
playground/: main.c
registračníSystem/: main.c
