cmake_minimum_required(VERSION 3.29)
project(prc C)

set(CMAKE_C_STANDARD 23)

#[[add_executable(prc Kalkulačka/main.c)]]
#[[add_executable(prc house/main.c)]]
#[[add_executable(prc enum/main.c)]]
#[[add_executable(prc registračníSystem/main.c)]]
#[[add_executable(prc Playground/main.c)]]

add_executable(prc KalkulačkaBetter/main.c)